# line_tracking_with_event_cameras

./: .gitignore  README.md
line_event_tracker/: CMakeLists.txt  package.xml
line_event_tracker/include/line_event_tracker/: chain.hpp  cluster.hpp  event.hpp  line.hpp  neighbouringFilter.hpp  params_reader.hpp  profiler.hpp  refactoryFilter.hpp  tracker.hpp
line_event_tracker/launch/: debug.launch  run.launch  run_with_visualizer.launch  test.launch
line_event_tracker/param/: bluefox_real_power_line_sunny.yaml  davis_flying_room_rope_ir_equi.yaml  davis_flying_room_rope_no_ir_equi.yaml  davis_flying_room_rope_no_ir_radtan.yaml  davis_real_power_line_sunny.yaml  flying_arena_real_power_line.yaml  flying_room_square.yaml  param.yaml  real_power_line.yaml  real_power_line_sunny.yaml
line_event_tracker/src/: chain.cpp  cluster.cpp  line.cpp  neighbouringFilter.cpp  node.cpp  params_reader.cpp  profiler.cpp  refactoryFilter.cpp  tracker.cpp
line_event_tracker_controller/: CMakeLists.txt  package.xml
line_event_tracker_controller/include/line_event_tracker_controller/: controller.hpp
line_event_tracker_controller/launch/: run.launch
line_event_tracker_controller/param/: param.yaml
line_event_tracker_controller/src/: controller.cpp  node.cpp
line_event_tracker_msgs/: CMakeLists.txt  package.xml
line_event_tracker_msgs/msg/: Line.msg  Lines.msg
line_event_tracker_visualizer/: CMakeLists.txt  package.xml
line_event_tracker_visualizer/include/line_event_tracker_visualizer/: visualizer.hpp
line_event_tracker_visualizer/launch/: debug.launch  run.launch
line_event_tracker_visualizer/src/: node.cpp  visualizer.cpp
prototype/: line_tracker.py  requirements.txt  run_line_tracker.py
prototype/utils/: animate_3D.py  config.py  create_video.py  data_structures.py  directed_neighbourhoods.py  filters.py  test.py  undistort.py  visualizations.py  visualize_3D.py  visualize_chain.py  visualize_cluster.py  visualize_line.py  visualize_line_3d.py
