<?xml version="1.0"?>
<package format="2">
    <name>line_event_tracker</name>
    <version>0.0.0</version>
    <description>The line_event_tracker package</description>
    <maintainer email="dietscha@ethz.ch">Alex Dietsche</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>dvs_msgs</depend>
    <depend>line_event_tracker_msgs</depend>
</package>