<?xml version="1.0" ?>
<package>
    <name>line_event_tracker_msgs</name>
    <version>0.0.0</version>
    <description>The line_event_tracker_msgs package</description>
    <maintainer email="dietscha@ethz.ch">Alex Dietsche</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>