<?xml version="1.0"?>
<package format="2">
  <name>line_event_tracker_visualizer</name>
  <version>0.0.0</version>
  <description>The line_event_tracker_visualizer package</description>
  <maintainer email="dietscha@ethz.ch">Alex Dietsche</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>line_event_tracker_msgs</depend>

</package>
